# simple-fs

./: README.md  pyproject.toml  sfs.py
src/sfs/: bitmap.py  fs.py  inode.py
tests/: test_base_fs.py  test_bitmap.py  test_metadata.py  test_simple_fs.py
